--- a/src/views/menu/menu.html
+++ b/src/views/menu/menu.html
@@ -1,6 +1,6 @@
 <div class="form-container" ng-controller="MenuController">
     <form action="">
-        Количество шайб:<br>
+        Number of pucks:<br>
         <input type="number" ng-model="number" min="0" ng-change="setNumber(number)"><br>
         Speed: <br>
 
